force-app/main/default/objects/Day_Visit_Plan__c/Day_Visit_Plan__c.object-meta.xml
<CustomObject>
    <label>Day Visit Plan</label>
    <nameField>
        <displayFormat>DVP-{0000}</displayFormat>
        <label>Day Visit Plan Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Day Visit Plan</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>