force-app/main/default/objects/Day_Visit_Plan__c/fields/Month_Name__c.field-meta.xml
<CustomField>
    <fullName>Month_Name__c</fullName>
    <label>Month Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>