force-app/main/default/objects/Day_Visit_Plan__c/fields/Monthly_Travel_Expense__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Travel_Expense__c</fullName>
    <label>Monthly Travel Expense</label>
    <referenceTo>Monthly_Travel_Expense__c</referenceTo>
    <relationshipLabel>Day Visit Plan</relationshipLabel>
    <relationshipName>Day_Visit_Plan</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>