force-app/main/default/objects/Day_Visit_Plan__c/fields/Service_Executive__c.field-meta.xml
<CustomField>
    <fullName>Service_Executive__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Executive</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Day_Visit_Plan</relationshipName>
    <type>Lookup</type>
</CustomField>