force-app/main/default/objects/Day_Visit_Plan__c/fields/Start_Day__c.field-meta.xml
<CustomField>
    <fullName>Start_Day__c</fullName>
    <label>Start Day</label>
    <type>Date</type>
</CustomField>