force-app/main/default/objects/Day_Visit_Plan__c/fields/Total_Covered_Distance__c.field-meta.xml
<CustomField>
    <fullName>Total_Covered_Distance__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Covered Distance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>