force-app/main/default/objects/Day_Visit_Plan__c/fields/Total_Distances__c.field-meta.xml
<CustomField>
    <fullName>Total_Distances__c</fullName>
    <label>Actual Distance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>