force-app/main/default/objects/Day_Visit_Plan__c/fields/Total_Km__c.field-meta.xml
<CustomField>
    <fullName>Total_Km__c</fullName>
    <label>Total Km</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>