force-app/main/default/objects/Day_Visit_Plan__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Service_Executive__c</columns>
    <columns>Monthly_Travel_Expense__c</columns>
    <columns>Total_Distances__c</columns>
    <columns>Total_Covered_Distance__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>