force-app/main/default/objects/Day_Visit_Plan__c/listViews/THIS_WEEK.listView-meta.xml
<ListView>
    <fullName>THIS_WEEK</fullName>
    <columns>NAME</columns>
    <columns>End_Location__Latitude__s</columns>
    <columns>End_Location__Longitude__s</columns>
    <columns>Start_Location__Latitude__s</columns>
    <columns>Start_Location__Longitude__s</columns>
    <columns>Total_Covered_Distance__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_WEEK</value>
    </filters>
    <label>THIS WEEK</label>
</ListView>